# ClionExample

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
ProjExe/: CMakeLists.txt
ProjExe/Configure/: version.h.in
ProjExe/Headers/: MyExe.h
ProjExe/Sources/: MyExe.cpp  main.cpp
ProjLib/: CMakeLists.txt
ProjLib/Headers/: MyLib.h
ProjLib/Sources/: MyLib.cpp
Solution/: Arm32ToolChain.cmake  CMakeGlobalSettings.cmake  CMakeLists.txt  FindThridParty.cmake
Solution/ProjExe/: CMakeLists.txt
Solution/ProjExe/Configure/: version.h.in
Solution/ProjExe/Headers/: MyExe.h
Solution/ProjExe/Sources/: MyExe.cpp
Solution/ProjLib/: CMakeLists.txt
Solution/ProjLib/Headers/: MyLib.h
